--- a/Site/index.html
+++ b/Site/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  
+  <script src="./js/jquery-3.3.1.min.js"></script>
   <script src="./js/script.js"></script>
 
 </head>
@@ -26,12 +26,17 @@
 
     <form>
       <div class="form-group">
+          <label for="school">School</label>
+          <select name="school" id="school"></select>
+      </div>
+      <div class="form-group">
         <label for="games">Games played</label>
-        <input id="games" type="text" />
+        <input id="games" type="number" min="1" max="50" />
       </div>
       <div class="form-group">
         <label for="blocks">FG %</label>
-        <input id="blocks" type="text" />
+        <input id="blocks" type="text" placeholder="het"/>
+        
       </div>
       <div class="form-group">
         <label for="blocks">2 points %</label>
