--- a/Server/files/index.html
+++ b/Server/files/index.html
@@ -24,7 +24,7 @@
   <section>
     <h2>Season stats</h2>
 
-    <form>
+    <form id="FormDraft" action="/">
       <div class="form-group">
           <label for="school">School</label>
           <select name="school" id="school"></select>
@@ -35,7 +35,7 @@
       </div>
       <div class="form-group">
         <label for="blocks">FG %</label>
-        <input id="blocks" type="text" placeholder="het"/>
+        <input id="blocks" type="text" name="blocks"/>
         
       </div>
       <div class="form-group">
@@ -74,8 +74,9 @@
         <label for="blocks">FG %</label>
         <input id="blocks" type="text" />
       </div>  
-      <button type="submit" class="btn btn-primary">Calculate</button>
+      <button type="submit" id="Calculate" class="btn btn-primary">Calculate</button>
     </form>
+    <div id="result"/></div>
   </section>
 
 
