added some post functionality

--- a/Server/files/index.html
+++ b/Server/files/index.html
@@ -24,7 +24,7 @@
   <section>
     <h2>Season stats</h2>
 
-    <form>
+    <form onsubmit="post();return false" >
       <div class="form-group">
           <label for="school">School</label>
           <select name="school" id="school"></select>
