--- a/Server/files/index.html
+++ b/Server/files/index.html
@@ -76,7 +76,8 @@
       </div>  
       <button type="submit" id="Calculate" class="btn btn-primary">Calculate</button>
     </form>
-    <div id="result"/></div>
+    <div id="result"></div>
+    <div></div>
   </section>
 
 
