--- a/Server/files/index.html
+++ b/Server/files/index.html
@@ -31,57 +31,44 @@
       </div>
       <div class="form-group">
         <label for="G">Games played</label>
-        <input id="G" type="number" min="1" max="50" />
+        <input id="G" type="number" min="1"/>
       </div>
       <div class="form-group">
-        <label for="MP">MP %</label>
-        <input id="MP" type="text" name="blocks"/>
-        
-      </div>
-      <div class="form-group">
-        <label for="PTS">PTS</label>
+        <label for="PTS">Points</label>
         <input id="PTS" type="text" />
       </div>
       <div class="form-group">
-        <label for="TRB">TRB %</label>
+        <label for="TRB">Total Rebounds</label>
         <input id="TRB" type="text" />
       </div>
       <div class="form-group">
-        <label for="AST">AST %</label>
+        <label for="AST">Asists</label>
         <input id="AST" type="text" />
       </div>
       <div class="form-group">
-        <label for="STL">STL</label>
+        <label for="STL">Steals</label>
         <input id="STL" type="text" />
     
       </div>
       <div class="form-group">
-        <label for="BLK">BLK %</label>
+        <label for="BLK">Bloks</label>
         <input id="BLK" type="text" />
       </div>
       <div class="form-group">
-        <label for="FG">FG %</label>
+        <label for="FG">Field goal %</label>
         <input id="FG" type="text" />
       </div>
       <div class="form-group">
-        <label for="2P">2P %</label>
+        <label for="2P">two point %</label>
         <input id="2P" type="text" />
       </div>
       <div class="form-group">
-        <label for="3P">3P %</label>
+        <label for="3P">tree point %</label>
         <input id="3P" type="text" />
       </div>
       <div class="form-group">
-        <label for="FT">FT %</label>
+        <label for="FT">free trow %</label>
         <input id="FT" type="text" />
-      </div>  
-      <div class="form-group">
-        <label for="WS">WS </label>
-        <input id="WS" type="text" />
-      </div>  
-      <div class="form-group">
-        <label for="WS">WS </label>
-        <input id="WS1" type="text" />
       </div>  
       <button type="submit" id="Calculate" class="btn btn-primary">Calculate</button>
     </form>
